[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "你的包名"
version = "0.1.0"
description = "包描述"
readme = "README.md"
authors = [{name = "作者名字", email = "作者邮箱"}]
license = {text = "MIT"}
keywords = ["关键字1", "关键字2"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "依赖包名>=版本号",
]
