[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nonebot-plugin-status"
version = "0.8.1"
description = "Check your server status (CPU, Memory, Disk Usage) via nonebot"
license = "MIT"
authors = ["yanyongyu <yyy@nonebot.dev>"]
readme = "README.md"
homepage = "https://github.com/nonebot/plugin-status"
repository = "https://github.com/nonebot/plugin-status"
documentation = "https://github.com/nonebot/plugin-status#readme"
keywords = ["nonebot", "nonebot2", "server", "status"]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = ">5.4"
nonebot2 = "^2.2.0"
pydantic = "^2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
isort = "^5.10.1"
black = "^24.0.0"
nonemoji = "^0.1.3"
pre-commit = "^3.3.0"

[tool.black]
line-length = 96
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 96
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 96
target-version = "py38"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "Q"]
ignore = ["E402", "F403", "F405", "C901", "UP037"]

[tool.pyright]
pythonPlatform = "All"
pythonVersion = "3.8"