[tool.poetry]
name = "nonebot_plugin_humanaticstore"
version = "0.1.1"
description = "一个强大的配置管理工具集"
authors = ["QuanhuZeyu <1624910218@qq.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0.1"
pydantic = "^2.6.4"
nonebot2 = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
